# ethsnarks-miximus

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  Makefile  README.md  appveyor.yml
circuit/: CMakeLists.txt  miximus.cpp  miximus.hpp  miximus_cli.cpp
docs/: deposit-withdraw-flow.xml
python/: .gitignore  Makefile  miximus.py
python/test/: test_miximus.py
solidity/: .solhint.json  Makefile  package.json  truffle.js
solidity/contracts/: Migrations.sol  Miximus.sol  TestableMiximus.sol
solidity/migrations/: 2_deploy_contracts.js
solidity/test/: TestMiximus.js
